<resources>
    <string name="app_name">Vishiki Salon</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sing Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hair_trim">Hair Trim</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_care">Skin Care</string>
    <string name="waxing">Waxing</string>
    <string name="hair_texture">Hair Texture</string>
    <string name="beard_grooming">Beard Grooming</string>
    <string name="nail_care">Nail Care</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="appointment">Appointment</string>
    <string name="users">Users</string>
    <string name="sales">Sales</string>
    <string name="total">Total</string>
    <string name="back">Back</string>
    <string name="about">Viishikii salon app is your one stop solution to an array of needs, which range from carried out professionally and conveniently. We aim to build the most complling home service app of the 21st century by offering the most convenient and premium service.
We simplify your everyday living by presenting a variety of services.
Viishikii believes to bridging the gap between customers and service providers by maintaining a very transparent way of communication and operation.</string>

    <string name="time_slot"><b>Time slot : </b> morning 10 to night 8</string>
    <string name="address"><address> <b>Address : </b>23 - Evenue building ,   Main road , Vadodara, Gujarat, India - 390000</address></string>

    <string name="firstAns">You can book services from android applications We will be very happy to pamper you.\n
Just download the viishikii salon app\n
1. When you open the app you see categories of the services available\n
2. Click on the preferred categories\n
3. You would presented with the sub category now.\n
4. You can choose desired service and click on confirm.\n
5. After that select date and book your services and confirm appointment.
    </string>

    <string name="secondAns">No , You don\'t need to worry about anything. Just sit back and book your appointment with your convenience.</string>
    <string name="thirdAns">Yes , Depending upon the availability of the slot and the expert we will reschedule your booking as per your preferred date.</string>
    <string name="fourthAns">If you forgot your password:\n
        Mail on <a href="mailto:vishikii@gmail.com"><b>vishikii@gmail.com</b></a>\n
    If you want to reset the password:\n
1. Click on forgot password\n
2. Enter email or phone number\n
3. Confirm password\n
4. Reset the password
    </string>

    <string name="fifthAns">Salon accept cash after services and UPI.</string>
    <string name="sixthAns">Our app have a history information after customer registers in app.</string>
    <string name="date_card_formate">dd/MM/yyyy</string>

    <string-array name="mHairTrim">
        <item>Regular Cut</item>
        <item>Bowl Cut</item>
        <item>Military Cut</item>
        <item>Low Fade</item>
    </string-array>

    <integer-array name="mHairTrimPrice">
        <item>200</item>
        <item>250</item>
        <item>500</item>
        <item>350</item>
    </integer-array>

    <string-array name="fHairTrim">
        <item>U/V cut</item>
        <item>Curtain bangs</item>
        <item>Long layer</item>
        <item>Butterfly haircut</item>
    </string-array>

    <integer-array name="fHairTrimPrice">
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
    </integer-array>

    <string-array name="hairColor">
        <item>Hi-Lighting Loreal</item>
        <item>Advanced Streaks</item>
        <item>Caramel</item>
        <item>Blowout Burgundy</item>
        <item>Ruby Fusion</item>
    </string-array>

    <integer-array name="hairColorPrice">
        <item>100</item>
        <item>500</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
    </integer-array>

    <string-array name="mSkinCare">
        <item>Facial</item>
        <item>Silver</item>
        <item>Peel Treatment</item>
        <item>Acne Free</item>
        <item>Cleanup</item>
    </string-array>

    <integer-array name="mSkinCarePrice">
        <item>300</item>
        <item>600</item>
        <item>550</item>
        <item>800</item>
        <item>200</item>
    </integer-array>

    <string-array name="mWaxing">
        <item>Back Waxing</item>
        <item>Chest Waxing</item>
        <item>Leg and Stomach Waxing</item>
    </string-array>

    <integer-array name="mWaxingPrice">
        <item>450</item>
        <item>350</item>
        <item>650</item>
    </integer-array>


    <string-array name="fWaxing">
        <item>Wax with honey choco wax</item>
        <item>Full arms with honey choco wax</item>
        <item>Full back with honey choco wax</item>
        <item>Full legs with honey choco wax</item>
        <item>Full underarms with honey choco wax</item>
    </string-array>

    <integer-array name="fWaxingPrice">
        <item>240</item>
        <item>220</item>
        <item>250</item>
        <item>170</item>
        <item>200</item>
    </integer-array>


    <string-array name="hairTexture">
        <item>Hair Smoothening</item>
        <item>WaistHair Smoothening</item>
        <item>Shoulder Length</item>
        <item>Straightening</item>
        <item>Loreal Straightening</item>
    </string-array>

    <integer-array name="hairTexturePrice">
        <item>5500</item>
        <item>4500</item>
        <item>2000</item>
        <item>3500</item>
        <item>1500</item>
    </integer-array>

    <string-array name="mBeardGrooming">
        <item>Regular</item>
        <item>Full Beard</item>
        <item>Circle Beard</item>
        <item>French</item>
    </string-array>

    <integer-array name="mBeardGroomingPrice">
        <item>100</item>
        <item>200</item>
        <item>200</item>
        <item>350</item>
    </integer-array>

    <string-array name="fHairColor">
        <item>Highlighting Loreal</item>
        <item>Advanced Streaks</item>
        <item>Caramel</item>
        <item>Blowout Burgundy</item>
        <item>Ruby Fusion</item>
    </string-array>

    <integer-array name="fHairColorPrice">
        <item>100</item>
        <item>500</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
    </integer-array>

    <string-array name="fSkinCare">
        <item>Facial</item>
        <item>CleanUp Berry</item>
        <item>Peel Treatment</item>
        <item>Beauty Facial</item>
        <item>Quick Glow Mashque</item>
    </string-array>

    <integer-array name="fSkinCarePrice">
        <item>500</item>
        <item>1000</item>
        <item>2600</item>
        <item>1600</item>
        <item>750</item>
    </integer-array>

    <string-array name="fNailCare">
        <item>Gel Polish</item>
        <item>French Nail Polish</item>
        <item>Nail Acrylic Natural</item>
        <item>Stamping Nail Art</item>
        <item>Removal Gel Polish</item>
        <item>Temporary Nail Extension</item>
    </string-array>

    <integer-array name="fNailCarePrice">
        <item>850</item>
        <item>150</item>
        <item>1000</item>
        <item>750</item>
        <item>250</item>
        <item>1500</item>
    </integer-array>


</resources>