<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragements.AboutFragment">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_period="1000" />

    <TextView
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp"
        android:gravity="left"
        android:textSize="@dimen/_13ssp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/about"/>

    <TextView
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp"
        android:gravity="left"
        android:textSize="@dimen/_13ssp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:text="@string/time_slot"/>

    <TextView
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp"
        android:gravity="left"
        android:textSize="@dimen/_13ssp"
        android:textStyle="italic"
        android:fontFamily="@font/poppins_regular"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/address"/>

</LinearLayout>