<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragements.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llAppointment"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_black"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_calendar_month_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/appointment"
                android:textColor="#000"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUsers"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_black"
            android:orientation="vertical">

            <ImageView
                android:padding="5dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/multiple_users" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/users"
                android:fontFamily="@font/poppinsbold"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llHistory"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_black"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_history_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/history"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSales"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border_black"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/sales" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sales"
                android:fontFamily="@font/poppinsbold"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>